--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,33 @@
 include: package:very_good_analysis/analysis_options.5.0.0.yaml
+
+analyzer:
+  exclude: [ lib/**.freezed.dart, lib/**.g.dart ]
+
+  errors:
+    invalid_annotation_target: false
+    use_build_context_synchronously: false
+
+  language:
+    strict-casts: true
+    strict-raw-types: true
+
 linter:
   rules:
+    cancel_subscriptions: true
+    close_sinks: true
+    avoid_relative_lib_imports: false
     public_member_api_docs: false
+    lines_longer_than_80_chars: true
+    avoid_dynamic_calls: true
+    avoid_type_to_string: true
+    always_declare_return_types: true
+    always_specify_types: false
+    omit_local_variable_types: false
+    prefer_relative_imports: true
+    always_use_package_imports: false
+    avoid_setters_without_getters: false
+
+dart_code_metrics:
+  rules:
+    always_remove_listener: true
+    dispose_fields: true
