--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,18 @@ environment:
 
 dependencies:
   bloc: ^8.1.2
+  cupertino_icons:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  flutter_map: ^5.0.0
+  handy_extensions:
   intl: ^0.18.0
+  relative_scale:
+
 
 dev_dependencies:
   bloc_test: ^9.1.2
@@ -25,3 +31,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/icons/
+    - assets/images/
