--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,5 +46,20 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>spotify</string>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLName</key>
+        <string>co.modestnerds.car-dash-2</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>co.modestnerds.car-dash-2</string>
+        </array>
+      </dict>
+    </array>
 </dict>
 </plist>
