--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   intl: ^0.18.0
   latlong2: ^0.9.0
   relative_scale:
-
+  spotify_sdk: ^2.3.1
 
 dev_dependencies:
   bloc_test: ^9.1.2
